figures.js: possibile aggiungere punti a FreeLine con coord assolute & aggiunti test

--- a/src/test/draw.html
+++ b/src/test/draw.html
@@ -83,12 +83,12 @@ figures.push(c);
 // Free line with 4 points
 c = new FreeLine();
 c.getBorderColour().set(10, 20, 40, new Opacity(1));
-c.getBounds().setStart(new Point(200, 500));
-c.getBounds().setEnd(new Point(400, 700));
-c.extend(new Point(0, 0));
-c.extend(new Point(0.5, 0.5));
-c.extend(new Point(0.6, 0.2));
-c.extend(new Point(1.0, 1.0));
+//c.getBounds().setStart(new Point(200, 500));
+//c.getBounds().setEnd(new Point(400, 700));
+c.extend(new Point(200, 500));
+c.extend(new Point(300, 600));
+c.extend(new Point(320, 520));
+c.extend(new Point(400, 700));
 figures.push(c);
 
 // Free line with 5 points
@@ -96,11 +96,11 @@ c = new FreeLine();
 c.getBorderColour().set(10, 20, 40, new Opacity(1));
 c.getBounds().setStart(new Point(400, 500));
 c.getBounds().setEnd(new Point(600, 700));
-c.extend(new Point(0, 0));
-c.extend(new Point(0.5, 0.5));
-c.extend(new Point(0.6, 0.2));
-c.extend(new Point(0.67, 0.7));
-c.extend(new Point(1.0, 1.0));
+c.extend(new Point(400, 500));
+c.extend(new Point(500, 600));
+c.extend(new Point(520, 520));
+c.extend(new Point(550, 550));
+c.extend(new Point(600, 700));
 figures.push(c);
 
 // Free line with 6 points
@@ -108,12 +108,12 @@ c = new FreeLine();
 c.getBorderColour().set(10, 20, 40, new Opacity(1));
 c.getBounds().setStart(new Point(600, 500));
 c.getBounds().setEnd(new Point(800, 700));
-c.extend(new Point(0, 0));
-c.extend(new Point(0.5, 0.5));
-c.extend(new Point(0.6, 0.2));
-c.extend(new Point(0.67, 0.7));
-c.extend(new Point(0.8, 0.9));
-c.extend(new Point(1.0, 1.0));
+c.extend(new Point(600, 500));
+c.extend(new Point(700, 600));
+c.extend(new Point(720, 520));
+c.extend(new Point(750, 550));
+c.extend(new Point(780, 690));
+c.extend(new Point(800, 700));
 figures.push(c);
 
 // Text
