una sola pagina web per tutti i test

--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -8,8 +8,14 @@
   <script src="../utils.js"></script>
   <script src="../figures.js"></script>
   <script src="../save.js"></script>
+  <script src="figuresTest.js"></script>
   <script src="saveTest.js"></script>
-  
+  <script>
+$(document).ready(function () {
+runFiguresTest();
+runSaveTest();
+});
+  </script>
 </head>
 <body>
   
