selezione figure per browser senza getImageData

--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -5,6 +5,8 @@
   <script src="../lib/jquery.js"></script>
   <link rel="stylesheet" href="http://dev.jquery.com/view/trunk/qunit/testsuite.css" type="text/css" media="screen" />
 
+<!--[if IE]><script type="text/javascript" src="../lib/excanvas.js"></script><![endif]-->
+
   <script src="../utils.js"></script>
   <script src="../figures.js"></script>
   <script src="../save.js"></script>
