prima implementazione selezione

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,7 +31,7 @@
 <link rel="stylesheet" href="../styles/menu_bar/menu-item.css" type="text/css" />
 <!-- Script di prova di disegno su canvas -->
 <script type="text/javascript">
-/*function draw(){
+/* function draw(){
 var canvas = document.getElementById("cv");
 
 //canvas.height = 1000;
@@ -169,7 +169,7 @@ menuBar5.init();
 		<img src="images/toolbar.png" width="34" height="546" alt="toolbar" />
 	</span> -->
 	<div id="tool">
-		<input onclick="draw()" title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
+		<input onclick="" title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
 		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"/><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierButton" type="button"/><br/>
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"/><br/>
