Aggiustata creazione immagini e selezione

--- a/pages/index.html
+++ b/pages/index.html
@@ -241,9 +241,19 @@ menuBar5.init();
 		<span class="paletteComponent" onclick="changeFarbColor('#666666')" style="background-color:#666666">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
 		<span class="paletteComponent" onclick="changeFarbColor('#333333')" style="background-color:#333333">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
 		<span id="lastPalette" onclick="changeFarbColor('#000000')" class="paletteComponent" style="background-color:#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+<span id="comboColor">
+<select>
+  <option value="bordo">Bordo</option>
+  <option value="riempimento">Riempimento</option>  
+</select>
+</span>
+
 	</div>
 
 <div/>
+
+
+
 <!-- Fine interfaccia -->
 
 
