--- a/pages/index.html
+++ b/pages/index.html
@@ -30,97 +30,11 @@
 <link rel="stylesheet" href="../styles/menu_bar/menu-bar.css" type="text/css" />
 <link rel="stylesheet" href="../styles/menu_bar/menu-item.css" type="text/css" />
 <!-- Script di prova di disegno su canvas -->
-<script type="text/javascript">
-/* function draw(){
-var canvas = document.getElementById("cv");
-
-//canvas.height = 1000;
-//canvas.width = 1000;
-var figures = [];
-
-// Polygon
-var c = new Polygon();
-c.getBorderColour().set(255, 0, 0, new Opacity(1));
-c.getBounds().setStart(new Point(0, 0));
-c.getBounds().setEnd(new Point(100, 100));
-c.edgeNumber().setVal(12);
-figures.push(c);
-// Deformed polygon with border colour
-c = new Polygon();
-c.getBounds().setStart(new Point(150, 0));
-c.getBounds().setEnd(new Point(250, 200));
-c.edgeNumber().setVal(7);
-figures.push(c);
-// Polygon with reversed bounds
-c = new Polygon();
-c.getBounds().setStart(new Point(400, 200));
-c.getBounds().setEnd(new Point(300, 0));
-c.edgeNumber().setVal(7);
-figures.push(c);
-
-// 2 Rectangles
-c = new Rectangle();
-c.getBorderColour().set(255, 0, 0, new Opacity(1));
-c.getBounds().setStart(new Point(50, 270));
-c.getBounds().setEnd(new Point(450, 320));
-figures.push(c);
-c = new Rectangle();
-c._fillColour.set(0, 255, 0, new Opacity(0.8));
-c.getBounds().setStart(new Point(0, 250));
-c.getBounds().setEnd(new Point(200, 300));
-figures.push(c);
-// Reversed rectangle
-c = new Rectangle();
-c.getBorderColour().set(255, 0, 0, new Opacity(1));
-c.getBounds().setStart(new Point(700, 300));
-c.getBounds().setEnd(new Point(500, 250));
-figures.push(c);
-
-// Ellipse
-c = new Circle();
-c.getBorderColour().set(0, 0, 255, new Opacity(1));
-c.getBounds().setStart(new Point(0, 350));
-c.getBounds().setEnd(new Point(400, 450));
-figures.push(c);
-
-// Circle
-c = new Circle();
-c.getBorderColour().set(125, 0, 255, new Opacity(1));
-c.getBounds().setStart(new Point(450, 350));
-c.getBounds().setEnd(new Point(550, 450));
-figures.push(c);
-
-// Reversed ellipse
-c = new Circle();
-c.getBorderColour().set(0, 0, 255, new Opacity(1));
-c.getBounds().setStart(new Point(750, 450));
-c.getBounds().setEnd(new Point(600, 350));
-figures.push(c);
-
-// Straight line
-c = new StraightLine();
-c.getBorderColour().set(0, 0, 255, new Opacity(1));
-c.getBounds().setStart(new Point(0, 500));
-c.getBounds().setEnd(new Point(200, 600));
-figures.push(c);
-
-figures.each(function (f) {
-               f.draw(canvas);
-             });
-}  */
-
-
-
-</script>
 </head>
-
-
 <body onload="">
-
 
 <!-- Interfaccia -->
 <div>
-
 
 <!-- Barra di salvataggio -->
 <ul id="menuModel5">
@@ -161,15 +75,12 @@ menuBar5.addMenuItems(menuModel5);
 menuBar5.setTarget('fifthMenu');
 menuBar5.init();
 </script>
-
-
-
-	<!-- Toolbar a pulsanti -->
+<!-- Toolbar a pulsanti -->
 	<!--  <span id="tool">
 		<img src="images/toolbar.png" width="34" height="546" alt="toolbar" />
 	</span> -->
 	<div id="tool">
-		<input onclick="" title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
+		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
 		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"/><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierButton" type="button"/><br/>
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"/><br/>
