--- a/pages/index.html
+++ b/pages/index.html
@@ -82,6 +82,7 @@ menuBar5.init();
 	<div id="tool">
 		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
 		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"/><br/>
+		<input title="Disegna una linea diritta" class="toolbarButton" id="straightLineButton" type="button"/><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierButton" type="button"/><br/>
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"/><br/>
 		<input title="Crea cerchi ed ellissi" class="toolbarButton" id="circleButton" type="button"/><br/>
@@ -170,23 +171,23 @@ menuBar5.init();
 
 <!-- Inizio Parte Dialog Colori-->
 <div id="colorDialog" class="flora" title="Modifica colori">
-	<p>Colore bordo:   
-		<span id="borderColorNow" style="background: red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+	<p>Bordo:   
+		<span id="borderColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span>
 			<input type="button" id="changeBorderCol" name="ChangeCol" value="Cambia Colore Bordo"/>
 		</span>
 	</p>
+	<!-- Farbtastic $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
 	<form id="colorx" action="" style="width: 400px;display: none;">
   		<div class="form-item" >
   			<label for="color">Color:</label>
   			<input type="text" id="color1" name="color1" value="#123456" />
   		</div>
   		<div id="picker1"></div>
-  	<!--  <input class="tooltip" type="button" id="closeWheel" value="Chiudi"></input> -->
 	</form>	
 	<!-- Seconda ruota -->
-	<p>Colore riempimento:  
-		<span id="fillColorNow" style="background: green">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+	<p>Riempimento:  
+		<span id="fillColorNow" style="background-color: #FFFFFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
 		<span>
 			<input type="button" id="changeFillCol" name="ChangeCol" value="Cambia Colore Riemp."/>
 		</span>
@@ -197,15 +198,18 @@ menuBar5.init();
   			<input type="text" id="color2" name="color2" value="#123456" />
   		</div>
   		<div id="picker2"></div>
-  	<!--  <input class="tooltip" type="button" id="closeWheel" value="Chiudi"></input> -->
 	</form>	
 </div>
 
 <!-- Parte Dialog Properties -->
 <div id="propertiesDialog" class="flora" title="Modifica attributi">
-	<p id="prova">Altezza:   <INPUT type="text" size="2"/></p>
-	<p>Larghezza:   <INPUT type="text" size="2"/></p>
-	<p>X:  &nbsp; <INPUT type="text" size="2"/>&nbsp;&nbsp;   Y:&nbsp;<INPUT type="text" size="2"/></p>
+	<p id="prova">Altezza:   
+		<INPUT id="DialogHeight" type="text" size="2" value=" " />px
+	</p>
+	<p>Larghezza:   
+		<INPUT id="DialogWidth" type="text" size="2" value=" " />px
+	</p>
+	<p>X:  &nbsp; <INPUT type="text" size="2" value=" " />&nbsp;&nbsp;   Y:&nbsp;<INPUT type="text" size="2"/></p>
 </div>
 
 
