load: aggiunto rettangolo

--- a/src/test/draw3.html
+++ b/src/test/draw3.html
@@ -13,7 +13,7 @@
 <body>
 <script type="text/javascript">
 $(document).ready(function(){
-var doc = "svg.svg";       
+var doc = "svg2.svg";       
 r = new SVGReader();
 b = (r.read(doc));
 document.write(b);
