figures.js: supporto per il testo (limitato) in tutti i browser

--- a/src/test/draw.html
+++ b/src/test/draw.html
@@ -5,6 +5,7 @@
 <title> Draw Test </title>
 <script src="../lib/jquery.js"></script>
 <!--[if IE]><script type="text/javascript" src="../lib/excanvas.js"></script><![endif]-->
+<script src="../lib/canvastext.js"> </script>
 <script src="../utils.js"></script>
 <script src="../figures.js"></script>
 <script type="text/javascript">
@@ -137,6 +138,7 @@ c.getBounds().setEnd(new Point(200, 850));
 figures.push(c);
 // Text with reversed bounding rectangle
 c = new Text('Aloha (2) !');
+c.setSelection(true);
 c.getBorderColour().set(255, 0, 0, new Opacity(1));
 c.getBounds().setStart(new Point(450, 850));
 c.getBounds().setEnd(new Point(250, 700));
