--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>AJAXDRAW</title>
+<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
 <link rel="stylesheet" title="mozilla" type="text/css" href="../styles/style.css"/>
 <link rel="alternate stylesheet" title="opera" type="text/css" href="../styles/opera.css"/>
 <link rel="alternate stylesheet" title="safari" type="text/css" href="../styles/safari.css"/>
@@ -10,7 +11,6 @@
 <link rel="alternate stylesheet" title="chrome" type="text/css" href="../styles/chrome.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/jquery.tooltip.css" />
 <link rel="stylesheet" href="../styles/farbtastic.css" type="text/css" />
-<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
 <script type="text/javascript" src="../src/lib/jquery.js"></script>
 <script type="text/javascript" src="../src/lib/farbtastic.js"></script>
 <script type="text/javascript" src="../src/lib/jquery.dimensions.js"></script>
@@ -31,7 +31,7 @@
 <link rel="stylesheet" href="../styles/menu_bar/menu-item.css" type="text/css" />
 <!-- Script di prova di disegno su canvas -->
 </head>
-<body onload="">
+<body>
 
 <!-- Interfaccia -->
 <div>
