--- a/pages/index.html
+++ b/pages/index.html
@@ -85,7 +85,7 @@ menuBar5.init();
 		<input title="Crea cerchi ed ellissi" class="toolbarButton" id="circleButton" type="button"/><br/>
 		<input title="Crea poligoni" class="toolbarButton" id="polygonButton" type="button"/><br/>
 		<input title="Disegna linee a mano libera" class="toolbarButton" id="freeHandButton" type="button"/><br/>
-		<input title="Disegna una prova" class="toolbarButton" id="provaButton" type="button"/><br/>
+		<input title="Crea oggetti testuali" class="toolbarButton" id="textButton" type="button"/><br/>
 	</div>
 	
 	<!-- Canvas -->
