cursori dinamici e qualche mod excanvas e casella testo

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,10 @@
 <link rel="alternate stylesheet" title="konqueror" type="text/css" href="../styles/konqueror.css"/>
 <link rel="alternate stylesheet" title="chrome" type="text/css" href="../styles/chrome.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/jquery.tooltip.css" />
-<link rel="stylesheet" href="../styles/farbtastic.css" type="text/css" />
+<link rel="stylesheet" type="text/css" href="../styles/farbtastic.css"/>
+<link rel="stylesheet" type="text/css" href="../styles/menu_bar/menu-bar.css"/>
+<link rel="stylesheet" type="text/css" href="../styles/menu_bar/menu-bar.css"/>
+<link rel="stylesheet" type="text/css" href="../styles/menu_bar/menu-item.css"/>
 <script type="text/javascript" src="../src/lib/jquery.js"></script>
 <script type="text/javascript" src="../src/lib/farbtastic.js"></script>
 <script type="text/javascript" src="../src/lib/jquery.dimensions.js"></script>
@@ -22,13 +25,12 @@
 <script type="text/javascript" src="../src/lib/ui.dialog.js"></script>
 <script type="text/javascript" src="../src/lib/ui.resizable.js"></script>
 <script type="text/javascript" src="../src/lib/ui.draggable.js"></script>
+<script type="text/javascript" src="../src/lib/canvastext.js"></script>
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/figures.js"></script>
 <script type="text/javascript" src="../src/gui.js"></script>
 <script type="text/javascript" src="../src/canvas.js"></script>
 <script type="text/javascript" src="../src/lib/menu-for-applications.js"></script>
-<link rel="stylesheet" href="../styles/menu_bar/menu-bar.css" type="text/css" />
-<link rel="stylesheet" href="../styles/menu_bar/menu-item.css" type="text/css" />
 <!-- Script di prova di disegno su canvas -->
 </head>
 <body>
