--- a/pages/index.html
+++ b/pages/index.html
@@ -82,7 +82,7 @@ menuBar5.init();
 		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
 		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"/><br/>
 		<input title="Disegna una linea diritta" class="toolbarButton" id="straightLineButton" type="button"/><br/>
-		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierButton" type="button"/><br/>
+		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierCurveButton" type="button"/><br/>
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"/><br/>
 		<input title="Crea cerchi ed ellissi" class="toolbarButton" id="circleButton" type="button"/><br/>
 		<input title="Crea poligoni" class="toolbarButton" id="polygonButton" type="button"/><br/>
