prima impl. freeline

--- a/pages/index.html
+++ b/pages/index.html
@@ -86,7 +86,7 @@ menuBar5.init();
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"/><br/>
 		<input title="Crea cerchi ed ellissi" class="toolbarButton" id="circleButton" type="button"/><br/>
 		<input title="Crea poligoni" class="toolbarButton" id="polygonButton" type="button"/><br/>
-		<input title="Disegna linee a mano libera" class="toolbarButton" id="freeHandButton" type="button"/><br/>
+		<input title="Disegna linee a mano libera" class="toolbarButton" id="freeLineButton" type="button"/><br/>
 		<input title="Crea oggetti testuali" class="toolbarButton" id="textButton" type="button"/><br/>
 	</div>
 	
