coordinate canvas bozza

--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@
 <script type="text/javascript" src="../src/lib/menu-for-applications.js"></script>
 <!-- Script di prova di disegno su canvas -->
 </head>
-<body>
+<body onload="document.getElementById('cv').onclick=foo;">
 
 <!-- Interfaccia -->
 <div>
