--- a/pages/index.html
+++ b/pages/index.html
@@ -112,8 +112,8 @@ menuBar5.init();
 	
 	<!-- Tavolozza nella parte bassa dello schermo -->
 	<div id="palette">
-		<span id="firstPalette" onclick="changeFarbColor('#EEC73E')" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#EEC73E')" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span id="firstPalette" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span class="paletteComponent" onclick="changeFarbColor('#FB8B00')" style="background-color:#FB8B00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span class="paletteComponent" onclick="changeFarbColor('#F44800')" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<span class="paletteComponent" onclick="changeFarbColor('#FFFF99')" style="background-color:#FFFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
