tavolozza orientata agli  oggetti con funzioni annesse

--- a/pages/index.html
+++ b/pages/index.html
@@ -113,44 +113,44 @@ menuBar5.init();
 	<!-- Tavolozza nella parte bassa dello schermo -->
 	<div id="palette">
 		<span id="firstPalette" class="paletteComponent" style="background-color:#EEC73E">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#FB8B00')" style="background-color:#FB8B00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#F44800')" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#FFFF99')" style="background-color:#FFFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#FFFF00')" style="background-color:#FFFF00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#FDCA01')" style="background-color:#FDCA01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#986601')" style="background-color:#986601">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#F44800')" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#FD3301')" style="background-color:#FD3301">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#D40000')" style="background-color:#D40000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#980101')" style="background-color:#980101">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#FDD99B')" style="background-color:#FDD99B">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#D9BB7A')" style="background-color:#D9BB7A">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#816647')" style="background-color:#816647">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#565248')" style="background-color:#565248">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#AACCEE')" style="background-color:#AACCEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#6699CC')" style="background-color:#6699CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<span class="paletteComponent" onclick="changeFarbColor('#336699')" style="background-color:#336699">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#003366')" style="background-color:#003366">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#B3DEFD')" style="background-color:#B3DEFD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#0197FD')" style="background-color:#0197FD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#0169C9')" style="background-color:#0169C9">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#013397')" style="background-color:#013397">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#CCFF99')" style="background-color:#CCFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#98FC66')" style="background-color:#98FC66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#339900')" style="background-color:#339900">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#015A01')" style="background-color:#015A01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" onclick="changeFarbColor('#002B3D')" style="background-color:#002B3D">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" onclick="changeFarbColor('#FF9BFF')" style="background-color:#FF9BFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" onclick="changeFarbColor('#FF00FF')" style="background-color:#FF00FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" onclick="changeFarbColor('#6600CC')" style="background-color:#6600CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" onclick="changeFarbColor('#EEEEEE')" style="background-color:#EEEEEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
-		<span class="paletteComponent" onclick="changeFarbColor('#CCCCCF')" style="background-color:#CCCCCF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
-		<span class="paletteComponent" onclick="changeFarbColor('#AAAAAA')" style="background-color:#AAAAAA">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#888888')" style="background-color:#888888">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#666666')" style="background-color:#666666">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span class="paletteComponent" onclick="changeFarbColor('#333333')" style="background-color:#333333">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
-		<span id="lastPalette" onclick="changeFarbColor('#000000')" class="paletteComponent" style="background-color:#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<!-- ><span class="paletteComponent" style="background-color:#F0A513">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> -->
+		<span class="paletteComponent" style="background-color:#FB8B00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent" style="background-color:#FFFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#FFFF00">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#FDCA01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#986601">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#F44800">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#FD3301">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#D40000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#980101">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#FDD99B">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#D9BB7A">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#816647">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#565248">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#AACCEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#6699CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<span class="paletteComponent"  style="background-color:#336699">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#003366">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#B3DEFD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#0197FD">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#0169C9">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#013397">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#CCFF99">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#98FC66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#339900">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#015A01">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent"  style="background-color:#002B3D">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent"  style="background-color:#FF9BFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent"  style="background-color:#FF00FF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent"  style="background-color:#6600CC">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent"  style="background-color:#EEEEEE">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>				
+		<span class="paletteComponent"  style="background-color:#CCCCCF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>		
+		<span class="paletteComponent"  style="background-color:#AAAAAA">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#888888">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#666666">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span class="paletteComponent"  style="background-color:#333333">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
+		<span id="lastPalette" class="paletteComponent" style="background-color:#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>	
 <span >
 <select id="comboColor">
   <option value="border">Bordo</option>
